# lawcheck

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: competitive-audit-2026-07.md  design-draft.md  direct-launch-kit.md  faceless-video-kit.md  followup-email-kit.md  marketing-review.md  telegram-launch-kit.md
lawcheck/: config.py  net.py
lawcheck/api/: main.py  schemas.py
lawcheck/checks/: base.py  registry.py
lawcheck/crawler/: browser.py  crawler.py  pdf_fetcher.py  snapshot.py
lawcheck/db/: models.py  repo.py  session.py
lawcheck/dictionaries/: consent_markers.yaml  fines.yaml  loader.py  pd_field_names.yaml  policy_sections.yaml  trackers.yaml
lawcheck/notify/: mailer.py  monitoring.py  telegram.py
lawcheck/payments/: tochka.py
lawcheck/reporting/: fines.py  followup.py  policy_draft.py  rkn_notification_draft.py  scandiff.py
tests/: test_a1_policy_presence.py  test_a2_policy_validity.py  test_a3_policy_sections.py  test_auth.py  test_auth_email.py  test_b_forms.py  test_c2_rkn.py  test_crawler_url_filter.py  test_d1_trackers.py  test_d2_cookie_banner.py  test_dashboard.py  test_db_repo.py  test_e1_requisites.py  test_e2_egrul.py  test_f_zozpp.py  test_feed_filter.py  test_followup.py  test_g_advertising.py  test_h_age_marking.py  test_inn_ogrn.py  test_mailer.py  test_ownership.py  test_pdf_fetcher.py  test_policy_draft.py  test_pricing_bridge.py  test_report_unlock.py  test_rkn_notification_draft.py  test_rkn_web.py  test_telegram.py
(+79 files in other folders)
